# Stm-Bulk-Terrace-Aware-Flattening

./: .gitattributes  .gitignore  LICENSE  README.md  dat_to_tiff.py  file_dedicated_to_obtaining_demo_files.py  launch_stm_flatten_gui.bat  pyproject.toml  requirements.txt  stm_flatten.py  stm_flatten_gui.py
demo/: README.md
docs/: ALGORITHM.md
