[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stm-autoflatten"
version = "0.1.0"
description = "Conservative batch flattening for STM topography images with DAT/TIFF/JPEG support and a review GUI."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "STM Autoflatten contributors" }
]
dependencies = [
  "numpy",
  "scipy",
  "scikit-image",
  "Pillow",
  "matplotlib",
  "tifffile",
]

[project.scripts]
stm-flatten = "stm_flatten:main"
stm-flatten-gui = "stm_flatten_gui:main"

[tool.setuptools]
py-modules = [
  "stm_flatten",
  "stm_flatten_gui",
]
